# python-project-83

./: .coverage  .gitignore  .gitignore]  Makefile  Makefile'  README.md  build.sh  coverage.xml  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: app.py  app.py'  db.py  html_parser.py  url_functions.py
page_analyzer/templates/: base.html  basic.html  basic.html]  index.html  url_info.html  urls.html
